# robotic-camera

./: README.md  pyproject.toml
robotic-camera/: camera_basic.py  test_script.py
